# sqlx-rs-playground

./: Cargo.toml  readme.md
src/: main.rs
