[package]
name = "sqlx-rs-playground"
version = "0.1.0"
authors = ["yoshikawa.daio"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "*"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "mysql", "runtime-tokio", "macros" ] }
tokio = { version = "0.2", features = ["full"] }
